--- a/serverless.yml
+++ b/serverless.yml
@@ -5,3 +5,10 @@ provider:
   runtime: python3.8
   lambdaHashingVersion: 20201221
   region: ${env:AWS_REGION}
+
+plugins:
+  - serverless-python-requirements
+
+custom:
+  pythonRequirements:
+    pythonBin: python3
