--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -30,10 +30,10 @@ jobs:
         run: make createvenv
 
       - name: Lint with Black
-        run: poetry run black conyappa --check
+        run: poetry run black src --check
 
       - name: Lint with Flake8
-        run: poetry run flake8 conyappa
+        run: poetry run flake8 src
 
       - name: Lint with iSort
-        run: poetry run isort conyappa --check
+        run: poetry run isort src --check
