feat: add the random seed generator

--- a/serverless.yml
+++ b/serverless.yml
@@ -12,3 +12,8 @@ plugins:
 custom:
   pythonRequirements:
     pythonBin: python3
+
+functions:
+  randomSeed:
+    handler: src/random_seed.main
+    description: Generates a random string to be used as seed.
