style: fix typo

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "playground",
+  "name": "conyappa",
   "description": "Latam’s first prize-linked savings account.",
   "version": "1.0.0",
   "devDependencies": {
