--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -19,8 +19,9 @@ jobs:
 
       - name: Install Poetry
         run: |
-          curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
+          make get-poetry
           echo $HOME/.poetry/bin >> $GITHUB_PATH
+
       # Cache the .venv directory
       - name: Set up Poetry cache
         uses: actions/cache@v2
@@ -34,7 +35,7 @@ jobs:
         run: poetry install
 
       - name: Lint with Black
-        run: poetry run black src --check
+        run: make black
 
   flake8:
     runs-on: ubuntu-latest
@@ -49,8 +50,9 @@ jobs:
 
       - name: Install Poetry
         run: |
-          curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
+          make get-poetry
           echo $HOME/.poetry/bin >> $GITHUB_PATH
+
       # Cache the .venv directory
       - name: Set up Poetry cache
         uses: actions/cache@v2
@@ -64,7 +66,7 @@ jobs:
         run: poetry install
 
       - name: Lint with Flake8
-        run: poetry run flake8 src
+        run: make flake8
 
   isort:
     runs-on: ubuntu-latest
@@ -79,8 +81,9 @@ jobs:
 
       - name: Install Poetry
         run: |
-          curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
+          make get-poetry
           echo $HOME/.poetry/bin >> $GITHUB_PATH
+
       # Cache the .venv directory
       - name: Set up Poetry cache
         uses: actions/cache@v2
@@ -94,4 +97,4 @@ jobs:
         run: poetry install
 
       - name: Lint with Isort
-        run: poetry run isort src --check
+        run: make isort
