--- a/config.cfg
+++ b/config.cfg
@@ -7,5 +7,5 @@ ignore = E203,E731
 [isort]
 profile = black
 default_section = THIRDPARTY
-known_first_party = src
+known_first_party = api,env,src
 sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
