--- a/serverless.yml
+++ b/serverless.yml
@@ -16,11 +16,15 @@ custom:
 functions:
   chooseResult:
     handler: src.choose_result
-    description: Sends a POST request to /draws.
+    description: Sends a POST request to /draws/ongoing/choose.
 
   createDraw:
     handler: src.create_draw
     description: Sends a POST request to /draws.
+
+  fetchMovements:
+    handler: src.fetch_movements
+    description: Sends a POST request to /movements/fetch.
 
   randomSeed:
     handler: src.random_seed
