Add chooseResult and fetchMovements functions (#7)
* feat: add chooseResult function

* chore: update linter config

* fix: file names

* style: format code

* fix: update imports

* fix: update an endpoint

* feat: add fetch movements function

* chore: add some missing code to complete the 'fetch movements' function

* chore: comment code for clarity

* fix: bugs

--- a/serverless.yml
+++ b/serverless.yml
@@ -14,9 +14,17 @@ custom:
     pythonBin: python3
 
 functions:
+  chooseResult:
+    handler: src.choose_result
+    description: Sends a POST request to /draws/ongoing/choose.
+
   createDraw:
     handler: src.create_draw
-    description: Sends a POST request to /draw.
+    description: Sends a POST request to /draws.
+
+  fetchMovements:
+    handler: src.fetch_movements
+    description: Sends a POST request to /movements/fetch.
 
   randomSeed:
     handler: src.random_seed
